--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
-    <title>{{ user.name }}'s Watchlist</title>
-</head>
-<body>
-    <h2>
-        <img src="{{ url_for('static', filename='images/avatar.png') }}" alt="Avatar" class="avatar">
-        {{ user.name }}'s Watchlist
-    </h2>
-    {# 使用 length 过滤器获取 movies 变量到长度 #}
-    <p>{{ movies|length }} Titles</p>
-    <ul class="movie-list">
-        {% for movie in movies %}
-        <li>{{ movie.title }} - {{ movie.year }}</li>
-        {% endfor %}
-    </ul>
-    <img class="totoro" src="{{ url_for('static', filename='images/totoro.gif') }}" alt="Walking Totoro">
-    <footer>
-        <small>&copy; 2020</small>
-    </footer>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<p>{{ movies|length }}</p>
+<ul class="movie-list">
+    {% for movie in movies %}
+    <li>{{ movie.title }} - {{ movie.year }}
+        <span class="float-right">
+            <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank" title="Find this movie on IMDB">IMDb</a>
+        </span>
+    </li>
+    {% endfor %}
+</ul>
+<img alt="Walking Totoro" class="totoro" src="{{ url_for('static', filename='images/totoro.gif') }}" title="to~to~ro~">
+{% endblock %}
